--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "ask-sdk": "^2.0.0",
     "cheerio": "^1.0.0-rc.10",
-    "request": "latest",
-    "request-promise": "latest"
+    "undici": "^4.14.1"
   }
 }
